2012-08-28  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Definition Commands): general updates.

2012-08-26  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Internationalization): general updates.

2012-08-25  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Conditionals, Defining New Texinfo Commands,
	Include Files, Hardcopy): general updates throughout the chapters.

2012-08-24  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Generic Translator texi2any): general
	updates throughout the chapter.

2012-08-23  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Creating and Installing Info Files): general
	updates throughout the chapter.

2012-08-13  Werner Lemberg  <wl@gnu.org>

	* doc/texinfo.tex (\ecfont): test for monospace,
	so we can get a typewriter thorn, etc.
	
2012-08-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Command Expansion): U+21A6
	for @expansion{}.  Other unrelated text tweaks.

2012-07-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\file, \option): \let to \code, not \samp.
	(\indicateurl): \let to \samp, not \code.
	* doc/texinfo.txi (env, file, option): document this.

2012-07-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref 8-bit Character Expansion): English.

2012-07-22  Per Bothner  <per@bothner.com>

	* tp/Texinfo/Convert/DocBook.pm: Add phrase element around category,
	for easier processing of the output.

2012-07-14  Andreas Schwab  <schwab@linux-m68k.org>

	* info/info-utils.c (text_buffer_vprintf): Create a copy of `ap' in
	the loop to avoid use after destruction.
	Report from Patrice, 13 Jul 2012 23:31:10.

2012-07-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Command Expansion): Clarify/unify
	treatment of @acronym, @abbr, @email, @image.