@@ -1,3 +1,9 @@
+2012-09-02  Karl Berry  <karl@gnu.org>
+
+	* util/gendocs.sh (--info): new option, defaults to --no-split
+	since split Info files are unlikely to be needed these days.
+	Suggestion from Akim Demaille, bug-automake mail 31 Aug 2012 19:03:16.
+
 2012-08-28  Patrice Dumas  <pertusus@free.fr>
         and Karl Berry  <karl@gnu.org>
 
